# device_board_beken

./: README.en.md  README.md
bk7231/: BUILD.gn
bk7231/bk7231_adapter/hals/communication/bluetooth/: BUILD.gn
bk7231/bk7231_adapter/hals/communication/bluetooth/src/: ble_test.c  ohos_bt_hal.c
bk7231/bk7231_adapter/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_pwm.c
bk7231/bk7231_adapter/hals/update/: hal_hota_board.c
bk7231/bk7231_sdk/: .Makefile.swp  BUILD.gn  Makefile  bk7231.ld  bk7231_ota.ld  build_sdk.sh  config.gni  pack.json
bk7231/bk7231_sdk/ohos/: BUILD.gn  ohos_entry.c
bk7231/bk7231_sdk/ohos_entry/: BUILD.gn  ohos_entry.c
bk7231/bk7231u_sdk/: BUILD.gn  Makefile  bk7231.ld  bk7231_ota.ld  build_sdk.sh  config.gni  get_libs.sh  pack.json
bk7231/bk7231u_sdk/ohos/: BUILD.gn  ohos_entry.c
bk7231/bk72xx_liteosm_sdk/: .config  Makefile  README.md  application.mk
bk7231/bk72xx_liteosm_sdk/beken378/: README.md  SConscript  beken_src.mk
bk7231/bk72xx_liteosm_sdk/beken378/app/: app.h
bk7231/bk72xx_liteosm_sdk/beken378/app/config/: param_config.h  sys_config_bk7231.h  sys_config_bk7231n.h  sys_config_bk7231u.h  sys_config_bk7271.h
bk7231/bk72xx_liteosm_sdk/beken378/bugzilla/: config.ini  findcommit.py  operexcel.py  rest-api.py
bk7231/bk72xx_liteosm_sdk/beken378/driver/ble/: ble_lib_src.mk
bk7231/bk72xx_liteosm_sdk/beken378/driver/include/: flash_pub.h  gpio_pub.h  spi_pub.h
bk7231/bk72xx_liteosm_sdk/beken378/driver/sys_ctrl/: sys_ctrl.h
bk7231/bk72xx_liteosm_sdk/beken378/driver/usb/: usb_lib_src.mk
bk7231/bk72xx_liteosm_sdk/beken378/func/include/: bk7011_cal_pub.h
bk7231/bk72xx_liteosm_sdk/beken378/func/sensor/: sensor_lib_src.mk
bk7231/bk72xx_liteosm_sdk/beken378/func/temp_detect/: temp_detect_pub.h
bk7231/bk72xx_liteosm_sdk/beken378/func/user_driver/: BkDriverFlash.h
bk7231/bk72xx_liteosm_sdk/beken378/os/: platform_stub.c
bk7231/bk72xx_liteosm_sdk/beken378/os/FreeRTOSv9.0.0/: rtos_pub.c
bk7231/bk72xx_liteosm_sdk/beken378/release/: sdk_revision.h
bk7231/bk72xx_liteosm_sdk/bugzilla/: config.ini
bk7231/bk72xx_liteosm_sdk/os/liteos_m/config/: target_config.h
bk7231/bk72xx_liteosm_sdk/os/liteos_m/port/: port.c  portmacro.h  wifi_ui_extra.c  wifi_ui_extra.h
bk7231/bk72xx_liteosm_sdk/os/liteos_m/utils/: los_debug.h
bk7231/bk72xx_liteosm_sdk/os/liteosm_ver1.0/config/: target_config.h
bk7231/bk72xx_liteosm_sdk/os/liteosm_ver1.0/utils/: los_debug.h
bk7231/bk72xx_liteosm_sdk/release/: osk_revision.h
bk7231/hals/communication/bluetooth/src/: ble_test.c  ohos_bt_hal.c
bk7231/hals/communication/wifi_lite/wifiaware/: BUILD.gn
bk7231/hals/communication/wifi_lite/wifiservice/: BUILD.gn
bk7231/hals/communication/wifi_lite/wifiservice/source/: wifi_device.c  wifi_device_util.c  wifi_hotspot.c
bk7231/hals/iot_hardware/wifiiot_lite/: hal_iot_flash.c  hal_iot_gpio.c
bk7231/hals/ohos_connect_adapter/: BUILD.gn
bk7231/hals/ohos_connect_adapter/src/: hilink_ble_demo.c  hilink_device.c  hilink_open_ota_adapter.c  hilink_open_ota_mcu_adapter.c  oem_auth_config.c
bk7231/hals/update/: hal_hota_board.c
bk7231/hals/utils/file/src/: hal_file.c
bk7231/patches/: beken378.patch  mbedtls.patch
bk72xx_liteosm_sdk/: .gitignore  .gitmodules  application.mk
bk72xx_liteosm_sdk/beken378/: .gitlab-ci.yml  SConscript  beken.mk  beken_src.mk
bk72xx_liteosm_sdk/beken378/app/: app.h
bk72xx_liteosm_sdk/beken378/app/config/: sys_config_bk7231n.h  sys_config_bk7231u.h  sys_config_bk7236.h  sys_config_bk7251.h  sys_config_bk7271.h
bk72xx_liteosm_sdk/beken378/bugzilla/: BK72XX_commits.xlsx  common.py
bk72xx_liteosm_sdk/beken378/common/: generic.h
bk72xx_liteosm_sdk/beken378/driver/ble_5_x_rw/: ble_lib_src.mk
bk72xx_liteosm_sdk/beken378/driver/entry/: arch_main.c.v1  boot_handlers_liteos.S
bk72xx_liteosm_sdk/beken378/driver/gpio/: gpio.h
bk72xx_liteosm_sdk/beken378/driver/include/: gpio_pub.h  sys_ctrl_pub.h
bk72xx_liteosm_sdk/beken378/func/bk7011_cal/: cal_lib_src.mk
bk72xx_liteosm_sdk/beken378/func/easy_flash/port/: ef_cfg.h
bk72xx_liteosm_sdk/beken378/func/include/: rw_pub.h  wlan_ui_pub.h
bk72xx_liteosm_sdk/beken378/func/rf_test/: rf_test_lib_src.mk
bk72xx_liteosm_sdk/beken378/func/rf_use/: rf_use_lib_src.mk
bk72xx_liteosm_sdk/beken378/func/uart_debug/: uart_debug_lib_src.mk
bk72xx_liteosm_sdk/beken378/func/wpa_supplicant_2_9/: supplicant_lib_src.mk
bk72xx_liteosm_sdk/beken378/func/wpa_supplicant_2_9/wpa_supplicant/: wpa_supplicant_i.h
bk72xx_liteosm_sdk/beken378/ip/: ip.mk  ip_lib_src.mk
bk72xx_liteosm_sdk/beken378/os/: mem_arch.c
bk72xx_liteosm_sdk/beken378/os/include/: rtos_pub.h
bk72xx_liteosm_sdk/beken378/release/: sdk_lib_files.txt  sdk_revision.h  sdk_src_files.txt
bk72xx_liteosm_sdk/config/: sys_config.h
bk72xx_liteosm_sdk/os/liteos_m/components/backtrace/: los_backtrace.c
bk72xx_liteosm_sdk/os/liteos_m/config/: target_config.h
bk72xx_liteosm_sdk/os/liteos_m/kal/cmsis/: cmsis_liteos2.c
bk72xx_liteosm_sdk/os/liteos_m/kernel/include/: los_config.h
bk72xx_liteosm_sdk/os/liteos_m/kernel/src/: los_sched.c
bk72xx_liteosm_sdk/os/liteos_m/port/: rtos_pub.c  wifi_ui_extra.c
bk72xx_liteosm_sdk/os/liteos_m/targets/bk72xx/: bk_los_timer.c
bk72xx_liteosm_sdk/os/liteos_m/utils/: los_debug.h
bk72xx_liteosm_sdk/tools/beken_packager/: beken_packager_wrapper
device/bk_corp/bk7231/: BUILD.gn
device/bk_corp/bk7231/bk7231_sdk/: Makefile  bk7231.ld  bk7231_ota.ld  config.gni  pack.json
device/bk_corp/bk7231/bk7231_sdk/ohos/: BUILD.gn
device/bk_corp/bk7231/patches/: base.patch  foundation.patch  kernel.patch  test.patch
device/bk_corp/bk72xx_liteosm_sdk/: .config  .platform  LICENSE  README.en.md  README.md  application.mk
device/bk_corp/bk72xx_liteosm_sdk/beken378/: .gitlab-ci.yml  SConscript  beken.mk  beken_src.mk
device/bk_corp/bk72xx_liteosm_sdk/beken378/common/: typedef.h
device/bk_corp/bk72xx_liteosm_sdk/config/: sys_config.h
device/bk_corp/bk72xx_liteosm_sdk/debug/: arm968ejs_attach.cmm  arm968ejs_up.cmm  disable_soc_interrupt.cmm  t32_software_reset.cmm
(+128 files in other folders)
