# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "0.2.x.n"

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = ""

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = "armv5te"

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "arm-none-eabi"

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "arm-none-eabi-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
  "-marm",
  "-mcpu=arm968e-s",
  "-mthumb-interwork",
  "-mlittle-endian",
  "-ffunction-sections",
  "-fdata-sections",
  "-D__LITEOS__",
  "-DCFG_SUPPORT_LITEOS",
]
board_cxx_flags = board_cflags
board_ld_flags = []

beken_sdk_dir = "${ohos_root_path}/device/bk_corp/bk7231/bk72xx_liteosm_sdk"

# Board related headfiles search path.
board_include_dirs = [
  "${ohos_root_path}utils/native/lite/include",  
  "${ohos_root_path}third_party/bounds_checking_function/include",
  "${beken_sdk_dir}/config",
  "${ohos_root_path}kernel/liteos_m/config",
  "${ohos_root_path}kernel/liteos_m/kal/cmsis",
  "${ohos_root_path}kernel/liteos_m/utils",
  "${ohos_root_path}kernel/liteos_m/components/cpup",
  "${ohos_root_path}kernel/liteos_m/components/power",
  "${ohos_root_path}kernel/liteos_m/kernel/include",
  "${ohos_root_path}kernel/liteos_m/kernel/arch/include",
  "${ohos_root_path}kernel/liteos_m/kernel/arch/arm/arm9/gcc",
  "${ohos_root_path}kernel/liteos_m/targets/bk7231",

    "${beken_sdk_dir}/beken378/func/lwip_intf/lwip-2.0.2/src/include",
    "${beken_sdk_dir}/beken378/func/lwip_intf/lwip-2.0.2/port",
    "${beken_sdk_dir}/beken378/os/include",
    "${beken_sdk_dir}/beken378/driver/include",
    "${beken_sdk_dir}/beken378/func/user_driver",
    "${beken_sdk_dir}/os/liteos_m/port",
    "${beken_sdk_dir}/beken378/ip/common",
    "${beken_sdk_dir}/beken378/driver/entry",
    "${beken_sdk_dir}/beken378/release",
    "${beken_sdk_dir}/beken378/driver/common",
    "${beken_sdk_dir}/beken378/common",
    "${beken_sdk_dir}/os/liteos_m/kal/posix/include",
    "${beken_sdk_dir}/beken378/func/include",
]

# Board adapter dir for OHOS components.
board_adapter_dir = "${ohos_root_path}device/bk_corp/bk7231/bk7231_sdk"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
