import("//build/lite/config/component/lite_component.gni")

lite_component("ohos") {
  features = [ ":ohos_entry" ]
}

static_library("ohos_entry") {
  sources = [
    "ohos_entry.c",
  ]
  deps = [
    "${beken_sdk_dir}/os/liteos_m/kal:kal",
  ]

  include_dirs = [
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/communication/broadcast",
    "//foundation/distributedschedule/samgr_lite/samgr/adapter",
    "//foundation/distributedschedule/samgr_lite/samgr/source",
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
  ]
}
