static_library("hal_iothardware") {
    sources = [
      "hal_iot_flash.c",
      "hal_iot_gpio.c",
      "hal_iot_i2c.c",
      "hal_iot_pwm.c",
      "hal_iot_uart.c",
      "hal_iot_watchdog.c",
      "hal_lowpower.c",
      "hal_reset.c",

      "iot_test.c",
    ]
    defines = [
      "CFG_SUPPORT_LITEOS",
    ]
    include_dirs = [
      "//utils/native/lite/include",
      "//base/iot_hardware/peripheral/interfaces/kits",

      "${beken_sdk_dir}/config",
      "${beken_sdk_dir}/beken378/release",
      "${beken_sdk_dir}/beken378/common",
      "${beken_sdk_dir}/beken378/driver/include",
      "${beken_sdk_dir}/beken378/driver/common",
      "${beken_sdk_dir}/beken378/driver/entry",
      "${beken_sdk_dir}/beken378/ip/common",
      "${beken_sdk_dir}/beken378/func/include",
      "${beken_sdk_dir}/beken378/func/user_driver",
      "${beken_sdk_dir}/beken378/os/include",
      "${beken_sdk_dir}/beken378/driver/i2c",
      "${beken_sdk_dir}/os/liteos_m/port",
    ]
}