import("//build/lite/ndk/ndk.gni")

static_library("wifiservice") {
  sources = [
    "source/wifi_device.c",
    "source/wifi_device_util.c",
    "source/wifi_hotspot.c",
  ]
  defines = [
    "CFG_SUPPORT_LITEOS",
  ]
  include_dirs = [
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    "//kernel/liteos_m/kal",
    "//kernel/liteos_m/kernel/include",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",

      "${beken_sdk_dir}/config",
      "${beken_sdk_dir}/beken378/release",
      "${beken_sdk_dir}/beken378/common",
      "${beken_sdk_dir}/beken378/driver/include",
      "${beken_sdk_dir}/beken378/driver/common",
      "${beken_sdk_dir}/beken378/driver/entry",
      "${beken_sdk_dir}/beken378/ip/common",
      "${beken_sdk_dir}/beken378/func/include",
      "${beken_sdk_dir}/beken378/func/user_driver",
      "${beken_sdk_dir}/beken378/os/include",
      "${beken_sdk_dir}/beken378/driver/i2c",
      "${beken_sdk_dir}/beken378/app/config",
      "${beken_sdk_dir}/beken378/ip/mac",
      "${beken_sdk_dir}/os/liteos_m/port",
  ]
}

if (ohos_kernel_type == "liteos_m") {
  ndk_lib("wifiservice_ndk") {
    deps = [ ":wifiservice" ]

    head_files =
        [ "//foundation/communication/wifi_lite/interfaces/wifiservice" ]
  }
}
