import("//build/lite/config/component/lite_component.gni")

lite_component("ohos") {
  features = [ ":ohos_entry" ]
}

static_library("ohos_entry") {
  sources = [
    "ohos_entry.c",
  ]
  deps = [
    "${beken_sdk_dir}/os/liteos_m/kal:kal",
    "//test/xts/tools/lite/hctest",
  ]
  defines = [
    "CFG_SUPPORT_LITEOS",
  ]

  include_dirs = [
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/communication/broadcast",
    "//foundation/distributedschedule/samgr_lite/samgr/adapter",
    "//foundation/distributedschedule/samgr_lite/samgr/source",
    
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    "//utils/native/lite/include",
    
    "${beken_sdk_dir}/beken378/os/include",
    "${beken_sdk_dir}/beken378/driver/include",
    "${beken_sdk_dir}/beken378/func/user_driver",
    "${beken_sdk_dir}/os/liteos_m/port",
    "${beken_sdk_dir}/beken378/ip/common",
    "${beken_sdk_dir}/beken378/driver/entry",
    "${beken_sdk_dir}/beken378/release",
    "${beken_sdk_dir}/beken378/driver/common",
    "${beken_sdk_dir}/beken378/common",
    "${beken_sdk_dir}/os/liteos_m/kal/posix/include",
    "${beken_sdk_dir}/beken378/func/include",
  ]
}
